--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "fuse.js": "^6.6.2"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "xlsx": "^0.18.5",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "fuse.js": "^6.6.2",
+    "fs": "0.0.1-security"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
